update user-icons and fix spacing on subject view

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -278,8 +278,8 @@ footer {
 }
 
 .user-icon{
-  width: 15px;
-  height: auto;
+  height: 20px;
+  width: auto;
 }
 
 .col-height.post-body{
